--- a/source/index.html
+++ b/source/index.html
@@ -27,6 +27,22 @@
         <button class="page-header__flag flag flag--rus" aria-label="Текущая версия">
           <img class="flag__image" src="img/rus.png" width="37" height="38" alt="Сайт на русском языке">
         </button>
+        <div class="page-header__languages languages languages--closed">
+          <ul class="languages__list">
+            <span class="visually-hidden">Выберите язык</span>
+            <li class="languages__item languages__item--active">
+              <img class="languages__image" src="img/rus.png" width="37" height="38" alt="Русский">
+              <span class="languages__text">Русский</span>
+            </li>
+            <li class="languages__item">
+              <img class="languages__image" src="img/eng.png" width="37" height="38" alt="Английский">
+              <span class="languages__text">Английский</span>
+            </li>
+          </ul>
+          <button class="languages__close">
+            <span class="visually-hidden">Закрыть</span>
+          </button>
+        </div>
       </div>
       <nav class="main-nav main-nav--closed">
         <ul class="main-nav__list">
@@ -55,7 +71,7 @@
           <button class="main-nav__flag flag flag--rus" aria-label="Текущая версия">
             <img class="flag__image" src="img/rus.png" width="37" height="38" alt="Сайт на русском языке">
           </button>
-          <div class="main-nav__languages languages">
+          <div class="main-nav__languages languages languages--closed">
             <ul class="languages__list">
               <span class="visually-hidden">Выберите язык</span>
               <li class="languages__item languages__item--active">
@@ -231,5 +247,67 @@
       </div>
     </div>
   </footer>
+  <script>
+    // открытие и закрытие навигации
+    var toggleMenu = document.querySelector('.page-header__toggle');
+    var menu = document.querySelector('.main-nav');
+
+    toggleMenu.addEventListener('click', function (evt) {
+      evt.preventDefault();
+      if (menu.classList.contains('main-nav--closed')) {
+        menu.classList.remove('main-nav--closed');
+        menu.classList.add('main-nav--opened');
+        toggleMenu.classList.remove('page-header__toggle--open');
+        toggleMenu.classList.add('page-header__toggle--close');
+      } else {
+        menu.classList.remove('main-nav--opened');
+        menu.classList.add('main-nav--closed');
+        toggleMenu.classList.remove('page-header__toggle--close');
+        toggleMenu.classList.add('page-header__toggle--open');
+      }
+    });
+
+    // выбор языка
+    var buttonHeaderLang = document.querySelector('.page-header__flag');
+    var popupHeaderLang = document.querySelector('.page-header__languages');
+    var buttonMenuLang = document.querySelector('.main-nav__flag');
+    var popupMenuLang = document.querySelector('.main-nav__languages');
+    var buttonCloseHeaderLang = popupHeaderLang.querySelector('.languages__close');
+    var buttonCloseMenuLang = popupMenuLang.querySelector('.languages__close');
+
+    buttonHeaderLang.addEventListener('click', function (evt) {
+      evt.preventDefault();
+      if (popupHeaderLang.classList.contains('languages--closed')) {
+        popupHeaderLang.classList.remove('languages--closed');
+        popupHeaderLang.classList.add('languages--opened');
+      } else {
+        popupHeaderLang.classList.remove('languages--opened');
+        popupHeaderLang.classList.add('languages--closed');
+      }
+    });
+
+    buttonCloseHeaderLang.addEventListener('click', function (evt) {
+      evt.preventDefault();
+      popupHeaderLang.classList.remove('languages--opened');
+      popupHeaderLang.classList.add('languages--closed');
+    });
+
+    buttonMenuLang.addEventListener('click', function (evt) {
+      evt.preventDefault();
+      if (popupMenuLang.classList.contains('languages--closed')) {
+        popupMenuLang.classList.remove('languages--closed');
+        popupMenuLang.classList.add('languages--opened');
+      } else {
+        popupMenuLang.classList.remove('languages--opened');
+        popupMenuLang.classList.add('languages--closed');
+      }
+    });
+
+    buttonCloseMenuLang.addEventListener('click', function (evt) {
+      evt.preventDefault();
+      popupMenuLang.classList.remove('languages--opened');
+      popupMenuLang.classList.add('languages--closed');
+    });
+  </script>
 </body>
 </html>
